
** Bug fixes

  date again converts from a specified time zone.  Previously output was
  not converted to the local time zone, and remained in the specified one.
  [bug introduced in coreutils-8.26]

  factor no longer goes into an infinite loop for certain numbers like
  158909489063877810457 and 222087527029934481871.
  [bug introduced in coreutils-8.20]

  wc --bytes --files0-from now correctly reports byte counts.
  Previously it may have returned values that were too large,
  depending on the size of the first file processed.
  [bug introduced in coreutils-8.24]

** Improvements

  The new 'date' option --rfc-email is now the long form for -R.
  The new option spelling is intended to avoid the need to track the
  Internet RFC number for email dates (currently RFC 5322).  The old
  option spellings --rfc-2822 and --rfc-822 still work.

  date now outputs "-00" for a numeric time zone if the time is UTC
  and the time zone abbreviation begins with "-", indicating that the
  time zone is indeterminate.

  stty now validates arguments before interacting with the device,
  ensuring there are no side effects to specifying an invalid option.


* Noteworthy changes in release 8.26 (2016-11-30) [stable]

** Bug fixes

  cp, mv, and install no longer run into undefined behavior when
  handling ACLs on Cygwin and Solaris platforms. [bug introduced in
  coreutils-8.24]

  cp --parents --no-preserve=mode, no longer copies permissions from source
  directories, instead using default permissions for created directories.
  [bug introduced in coreutils-5.93]

  chcon, chgrp, chmod, chown, du, and rm, or specifically utilities
  using the FTS interface, now diagnose failures returned by readdir().
  [this bug was inherent in the use of fts: thus, for rm the bug was
  introduced in coreutils-8.0.  du, chmod, chgrp and chown started using
  fts in 6.0.  chcon was added in coreutils-6.9.91 with fts support.  ]

  date, du, ls, and pr no longer mishandle time zone abbreviations on